--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env DEBUG=service-topup-game:* & nodemon -r dotenv/config ./bin/www"
   },
   "dependencies": {
+    "argon2": "^0.28.3",
     "cookie-parser": "~1.4.6",
     "cors": "^2.8.5",
     "debug": "~4.3.3",
