--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "eslint": "^8.5.0",
     "nodemon": "^2.0.15"
   }
 }
